[gd_scene load_steps=8 format=3 uid="uid://5uebkx7jyanb"]

[ext_resource type="Script" path="res://scripts/popup_box.gd" id="1_04wj0"]
[ext_resource type="Shader" path="res://assets/popup_box.gdshader" id="2_xo6qv"]
[ext_resource type="AudioStream" uid="uid://rgpupexm47ob" path="res://assets/sfx/loadshell.wav" id="3_s3plh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ubi3n"]
shader = ExtResource("2_xo6qv")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_6nub3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nd3h1"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k67jp"]
_data = {
"RESET": SubResource("Animation_6nub3"),
"fade": SubResource("Animation_nd3h1")
}

[node name="PopupBox" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_04wj0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ubi3n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.087037
anchor_top = 0.0770833
anchor_right = 0.9
anchor_bottom = 0.890104
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="AmmoArray" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 100

[node name="LoadShellSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s3plh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k67jp")
}

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
